--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.17
   pin_code_fields: ^8.0.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
