--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.0.17
   pin_code_fields: ^8.0.1
   image_picker: ^1.1.2
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
