--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   smooth_page_indicator: ^1.2.1
   flutter_launcher_icons: ^0.14.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
