--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   flutter_launcher_icons: ^0.14.3
   carousel_slider: ^5.0.0
+  lucide_icons: ^0.257.0
 
 
 dev_dependencies:
