--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   carousel_slider: ^5.0.0
   lucide_icons: ^0.257.0
+  http: ^1.3.0
 
 
 dev_dependencies:
